--- a/scss/_discount.scss
+++ b/scss/_discount.scss
@@ -44,7 +44,7 @@
             background: url('../images/discounttitle_bg.png') no-repeat;
             background-size: 100%;
             padding-left: 45px;
-            color: #fff;
+            color: #ffffff;
             &.blue {
                 background-position-y: 0px;
             }
@@ -144,7 +144,7 @@
             right: 30px;
             bottom: 20px;
             font-weight: bold;
-            color: #fff;
+            color: #ffffff;
             border-radius: 3px;
             font-size: 18px;
             &:hover,&:active,&.active {
