--- a/scss/_fixside.scss
+++ b/scss/_fixside.scss
@@ -274,7 +274,7 @@
             &:hover,&:active,&.active {
                 background: linear-gradient(to right, #7f8cd1 0%, #1a2b84 100%);
                 span {
-                    background: #fff;
+                    background: #ffffff;
                 }
             }
 
