--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -362,7 +362,7 @@
 					width: 1%;
 				}
 				&:nth-of-type(7) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -424,7 +424,7 @@
 				}
 
 				&:nth-of-type(9) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -459,7 +459,7 @@
 
 				&:nth-of-type(2),&:nth-of-type(3),&:nth-of-type(10),
 				&:nth-of-type(6),&:nth-of-type(9) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(4),&:nth-of-type(7) {
@@ -524,7 +524,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(3) {
-					min-width: 50px;
+					min-width: 55px;
 
 					p {
 						padding: 0px;
@@ -540,7 +540,7 @@
 				}
 
 				&:nth-of-type(7) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -569,7 +569,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(3) {
-					min-width: 50px;
+					min-width: 55px;
 
 					p {
 						padding: 0px;
@@ -591,7 +591,7 @@
 				}
 
 				&:nth-of-type(10) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -618,7 +618,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(3),&:nth-of-type(4) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(5),&:nth-of-type(6) {
@@ -634,7 +634,7 @@
 				}
 
 				&:nth-of-type(20) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -696,7 +696,7 @@
 				}
 
 				&:nth-of-type(10) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -748,7 +748,7 @@
 				}
 
 				&:nth-of-type(13) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -764,7 +764,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(3),&:nth-of-type(11) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(4) {
@@ -828,7 +828,7 @@
 				}
 
 				&:nth-of-type(4) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -852,7 +852,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(10) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3),&:nth-of-type(4),&:nth-of-type(8) {
@@ -904,7 +904,7 @@
 				}
 
 				&:nth-of-type(6),&:nth-of-type(7) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -936,7 +936,7 @@
 				}
 
 				&:nth-of-type(12) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -990,7 +990,7 @@
 				}
 
 				&:nth-of-type(15) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1006,7 +1006,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(19) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3) {
@@ -1038,7 +1038,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(18) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3) {
@@ -1070,7 +1070,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(15) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3) {
@@ -1208,7 +1208,7 @@
 				}
 
 				&:nth-of-type(4) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1229,7 +1229,7 @@
 				}
 
 				&:nth-of-type(6) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1268,7 +1268,7 @@
 				}
 
 				&:nth-of-type(4) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1295,7 +1295,7 @@
 				}
 
 				&:nth-of-type(16) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1324,7 +1324,7 @@
 				}
 
 				&:nth-of-type(10) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1407,7 +1407,7 @@
 				}
 
 				&:nth-of-type(12) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1464,7 +1464,7 @@
 				}
 
 				&:nth-of-type(15) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1480,7 +1480,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(13) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3),&:nth-of-type(11),&:nth-of-type(12) {
@@ -1548,7 +1548,7 @@
 				}
 
 				&:nth-of-type(6) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1591,7 +1591,7 @@
 				}
 
 				&:nth-of-type(9) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1607,7 +1607,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(3),&:nth-of-type(6) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(4) {
@@ -1675,7 +1675,7 @@
 				}
 
 				&:nth-of-type(13) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1729,7 +1729,7 @@
 				}
 
 				&:nth-of-type(16) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1745,7 +1745,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(14) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3),&:nth-of-type(12),&:nth-of-type(13) {
@@ -1811,7 +1811,7 @@
 				}
 
 				&:nth-of-type(4) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1835,7 +1835,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(6),&:nth-of-type(11) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3),&:nth-of-type(4),&:nth-of-type(7),
@@ -1912,7 +1912,7 @@
 				}
 
 				&:nth-of-type(11) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1966,7 +1966,7 @@
 				}
 
 				&:nth-of-type(14) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 			}
 		}
@@ -1999,7 +1999,7 @@
 				}
 
 				&:nth-of-type(2),&:nth-of-type(12) {
-					min-width: 50px;
+					min-width: 55px;
 				}
 
 				&:nth-of-type(3),&:nth-of-type(10),&:nth-of-type(11) {
@@ -2232,7 +2232,7 @@
 		td {
 			vertical-align: middle;
 			word-break: break-all;
-			color: #fff;
+			color: #ffffff;
 			position: relative;
 
 			&:nth-of-type(1) {
@@ -2271,7 +2271,7 @@
 				position: absolute;
 				width: 40px;
 				height: 40px;
-				background: #fff;
+				background: #ffffff;
 				top: 50%;
 				transform: translateY(-50%);
 				right: 0px;
@@ -2312,7 +2312,7 @@
 					position: absolute;
 					width: 20px;
 					height: 60px;
-					background: linear-gradient(to right, transparent, #fff, transparent);
+					background: linear-gradient(to right, transparent, #ffffff, transparent);
 					transform: rotate(135deg);
 					top: -15px;
 					left: -40px;
@@ -2408,13 +2408,13 @@
 					border: none;
 					background: transparent;
 					pointer-events: none;
-					color: #fff;
+					color: #ffffff;
 				}
 
 				.name {
 					font-size: 13px;
 					padding-right: 20px;
-					color: #fff;
+					color: #ffffff;
 				}
 			}
 		}
@@ -2738,7 +2738,7 @@
 				.mainWindow {
 					width: 98%;
 					height: 100%;
-					border: solid 1px #6a6a6a;
+					border: solid 1px #626262;
 					border-radius: 5px;
 					box-sizing: border-box;
 					margin: 25px 0px 15px;
@@ -2796,7 +2796,7 @@
 					height: auto;
 					text-align: right;
 					padding-bottom: 15px;
-					color: #fff;
+					color: #ffffff;
 					font-size: 13px;
 
 					a {
@@ -2852,7 +2852,7 @@
 			th {
 				
 				button {
-					color: #fff;
+					color: #ffffff;
 					background: transparent;
 					border: none;
 					float: right;
@@ -2901,7 +2901,7 @@
 
 						p {
 							font-size: 14px;
-							color: #fff;
+							color: #ffffff;
 							text-align: left;
 							width: 50%;
 							margin: 0px auto;
@@ -2932,7 +2932,7 @@
 								border: solid 1px #ababab;
 								border-radius: 30px;
 								padding: 5px 8px;
-								color: #fff;
+								color: #ffffff;
 								position: absolute;
 								right: -80px;
 								top: 5px;
@@ -3005,7 +3005,7 @@
 							}
 
 							p {
-								color: #fff;
+								color: #ffffff;
 								font-size: 14px;
 								text-align: left;
 
@@ -3026,7 +3026,7 @@
 
 								button {
 									background: transparent;
-									color: #fff;
+									color: #ffffff;
 									border: solid 1px #ababab;
 									font-size: 12px;
 									padding: 2px 5px;
@@ -3144,7 +3144,7 @@
 					height: 145px;
 					border-radius: 5px;
 					background: #242424;
-					color: #fff;
+					color: #ffffff;
 					font-size: 17px;
 					margin: 20px 30px;
 					transition: 0.25s all;
@@ -3343,7 +3343,7 @@
 		}
 
 		tr {
-			border-bottom: solid 1px #747474;
+			border-bottom: solid 1px #707070;
 			background: linear-gradient(to top,#343434 0%,#404040 100%);
 
 			&.fail {
@@ -3355,7 +3355,7 @@
 			}
 			
 			td {
-				border-right: solid 1px #747474;
+				border-right: solid 1px #707070;
 				padding: 10px;
 				color: #dddddd;
 				font-size: 14px;
@@ -3447,7 +3447,7 @@
 					float: left;
 					width: 1px;
 					height: 14px;
-					background: #747474;
+					background: #707070;
 					margin: 0px 10px;
 				}
 
@@ -3495,7 +3495,7 @@
 				}
 
 				.teamName {
-					color: #fff
+					color: #ffffff
 				}
 
 				.separate {
@@ -3529,7 +3529,7 @@
 			td {
 				padding: 10px 0px;
 				font-size: 15px;
-				color: #3abc0d;
+				color: #37bd10;
 
 				&:nth-of-type(1),&:nth-of-type(3),&:nth-of-type(5) {
 					width: 10%;
@@ -3552,7 +3552,7 @@
 					float: right;
 					width: 1px;
 					height: 16px;
-					background: #747474;
+					background: #707070;
 				}
 			}
 		}
@@ -3601,7 +3601,7 @@
 			td {
 				text-align: left;
 				padding: 10px 35px;
-				color: #fff;
+				color: #ffffff;
 				line-height: 24px;
 				font-size: 14px;
 
@@ -3925,7 +3925,7 @@
 						p {
 							font-size: 14px;
 							line-height: 20px;
-							color: #fff;
+							color: #ffffff;
 						}
 					}
 					.partnerimg {
@@ -3970,7 +3970,7 @@
 						p {
 							font-size: 14px;
 							line-height: 20px;
-							color: #fff;
+							color: #ffffff;
 						}
 					}
 				}
@@ -4009,7 +4009,7 @@
 
 					p {
 						font-size: 14px;
-						color: #fff;
+						color: #ffffff;
 
 						&.remind {
 							font-size: 13px;
@@ -4096,7 +4096,7 @@
 					box-sizing: border-box;
 					outline: none;
 					padding: 10px;
-					color: #fff;
+					color: #ffffff;
 					font-size: 15px;
 					resize: none;
 					border-radius: 3px;
@@ -4195,7 +4195,7 @@
 
 			td {
 				padding: 10px;
-				color: #fff;
+				color: #ffffff;
 				border-right: solid 1px #ababab;
 
 				&:last-child {
@@ -4215,7 +4215,7 @@
 			td {
 
 				p {
-					color: #fff;
+					color: #ffffff;
 					padding: 10px;
 					font-size: 14px;
 				}
@@ -4283,7 +4283,7 @@
 							border: solid 1px #ababab;
 							border-radius: 3px;
 							padding: 5px 8px;
-							color: #fff;
+							color: #ffffff;
 
 							&:hover,&:active,&.active {
 								border-color: #aef156;
@@ -4333,7 +4333,7 @@
 						border: solid 1px #ababab;
 						border-radius: 3px;
 						padding: 5px 8px;
-						color: #fff;
+						color: #ffffff;
 						position: absolute;
 						right: 0px;
 						top: 19px;
@@ -4376,9 +4376,9 @@
 						box-sizing: border-box;
 						border: solid 1px #858585;
 						border-radius: 3px;
-						color: #fff;
+						color: #ffffff;
 						padding-left: 10px;
-						background: linear-gradient(to top,#333333 0%,#272727 100%);
+						background: linear-gradient(to top,#393939 0%,#272727 100%);
 	
 						&::placeholder {
 							color: #999999;
@@ -4445,7 +4445,7 @@
 						p {
 							width: 100%;
 							font-size: 22px;
-							color: #fff;
+							color: #ffffff;
 							text-align: center;
 							padding: 20px 0px 15px;
 						}
@@ -4549,7 +4549,7 @@
 					height: 40px;
 					box-sizing: border-box;
 					border: solid 1px #858585;
-					background: linear-gradient(to top,#333333 0%,#272727 100%);
+					background: linear-gradient(to top,#393939 0%,#272727 100%);
 					border-radius: 3px;
 					padding-left: 10px;
 					color: #999999;
@@ -4829,7 +4829,7 @@
 							height: 40px;
 							padding-left: 10px;
 							border: solid 1px #858585;
-							background: linear-gradient(to top,#333333 0%,#272727 100%);
+							background: linear-gradient(to top,#393939 0%,#272727 100%);
 							color: #d2d2d2;
 							border-radius: 3px;
 							box-sizing: border-box;
@@ -4947,7 +4947,7 @@
 						width: 240px;
 						height: 40px;
 						border: solid 1px #858585;
-						background: linear-gradient(to top,#333333 0%,#272727 100%);
+						background: linear-gradient(to top,#393939 0%,#272727 100%);
 						border-radius: 3px;
 						box-sizing: border-box;
 						padding-left: 10px;
@@ -4957,7 +4957,7 @@
 
 					.remind {
 						display: inline-block;
-						color: #fff;
+						color: #ffffff;
 						margin-left: 30px;
 						font-size: 14px;
 						position: relative;
