--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -41,7 +41,7 @@ header {
                 position: absolute;
                 left: -23px;
                 top: 4px;
-                color: #31be16;
+                color: #37bd10;
             }
 
             marquee {
@@ -56,7 +56,7 @@ header {
         span {
             float: right;
             font-size: 12px;
-            color: #7a7a7a;
+            color: #969696;
             line-height: 25px;
             margin-right: 15px;
         }
@@ -72,7 +72,7 @@ header {
                 height: 15px;
                 border-radius: 30px;
                 margin: 5px 5px 0px 0px;
-                border: solid 1px #46d616;
+                border: solid 1px #37bd10;
                 background: #131313;
 
                 &:nth-of-type(2) {
@@ -103,7 +103,7 @@ header {
             font-weight: bolder;
             text-align: center;
             line-height: 85px;
-            color: #fff
+            color: #ffffff
         }
 
         //上列表
@@ -121,7 +121,7 @@ header {
                     padding: 0px 10px;
                     height: 76px;
                     line-height: 85px;
-                    color: #fff;
+                    color: #ffffff;
                     border-bottom: solid 5px transparent;
                     font-size: 14px;
 
@@ -205,7 +205,7 @@ header {
 
                 &:hover,&:active,&.active {
                     border-color: #ffffff;
-                    background: #fff;
+                    background: #ffffff;
                     color: #393939;
                 }
             }
@@ -213,7 +213,7 @@ header {
             .signupBtn {
                 background: linear-gradient(to top,#131313 0%,#323232 100%);
                 border-radius: 3px;
-                color: #fff;
+                color: #ffffff;
                 padding: 6px 14px;
                 font-size: 14px;
                 font-weight: bold;
@@ -221,7 +221,7 @@ header {
 
                 &:hover,&:active,&.active {
                     border-color: #ffffff;
-                    background: #fff;
+                    background: #ffffff;
                     color: #59a936;
                 }
             }
@@ -263,7 +263,7 @@ header {
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
-                    background: #262626;
+                    background: #1f1f1f;
 
                     option {
                         color: #ababab;
@@ -297,7 +297,7 @@ header {
                     padding: 7px 7px 5px;
                     border: solid 1px #707070;
                     border-radius: 3px;
-                    background: #262626;
+                    background: #1f1f1f;
                 }
 
                 span {
@@ -356,7 +356,7 @@ header {
                     border-radius: 3px;
                     color: #ababab;
                     font-size: 12px;
-                    background: #262626;
+                    background: #1f1f1f;
                     appearance:none;   
                     -moz-appearance:none;   
                     -webkit-appearance:none;
