--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -15,12 +15,12 @@
     }
 
     &::-webkit-scrollbar-track {
-        background: #121212;
+        background: #131313;
         border-radius: 10px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: #606360;
+        background: #626262;
         border-radius: 10px;
     }
 
@@ -53,7 +53,7 @@
             background: linear-gradient(to bottom, #1d1d1d 16%, #303030 100%);
 
             div {
-                color: #3abc0d;
+                color: #37bd10;
             }
         }
 
@@ -70,13 +70,13 @@
             .line {
                 width: 1px;
                 height: 15px;
-                background: #747474;
+                background: #707070;
                 margin: 10px 0px 0px 0px;
                 float: right;
             }
             
             span {
-                color: #3abc0d;
+                color: #37bd10;
 
                 &.remind {
                     position: absolute;
@@ -255,7 +255,7 @@
             width: 92%;
             height: auto;
             border-radius: 12px;
-            border: 1px solid #747474;
+            border: 1px solid #707070;
             margin: 0px auto 20px;
             padding: 15px;
 
@@ -332,12 +332,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #121212;
+                background: #131313;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: #606360;
+                background: #626262;
                 border-radius: 10px;
             }
 
@@ -426,12 +426,12 @@
             }
         
             &::-webkit-scrollbar-track {
-                background: #121212;
+                background: #131313;
                 border-radius: 10px;
             }
         
             &::-webkit-scrollbar-thumb {
-                background: #606360;
+                background: #626262;
                 border-radius: 10px;
             }
 
@@ -551,7 +551,7 @@
                         width: 8px;
                         height: 8px;
                         border-radius: 8px;
-                        background: #fff;
+                        background: #ffffff;
                         margin: 0px 5px 2px;
                     }
                 }
@@ -731,7 +731,7 @@
                 
                 p {
                     height: 32px;
-                    background: #fff;
+                    background: #ffffff;
                     line-height: 32px;
                     padding-left: 15px;
                     font-size: 15px;
@@ -763,7 +763,7 @@
         background: #313131;
         bottom: 0px;
         z-index: 2;
-        color: #fff;
+        color: #ffffff;
         border: solid 1px #242424;
         box-sizing: border-box;
 
@@ -928,7 +928,7 @@
                     height: 0px;
                     border-style: solid;
                     border-width: 6px 5px 0px 5px;
-                    border-color: #747474 transparent;
+                    border-color: #707070 transparent;
                     top: 21px;
                     right: 5px;
                 }
@@ -1039,7 +1039,7 @@
         width: 100%;
         height: 35px;
         background: #1f1f1f;
-        border-bottom: solid 1px #3abc0d;
+        border-bottom: solid 1px #37bd10;
 
         //投注紀錄用
         &.betting {
@@ -1055,7 +1055,7 @@
                 .line {
                     width: 1px;
                     height: 10px;
-                    background: #747474;
+                    background: #707070;
                     margin: -5px 0px 0px 0px;
                     float: right;
                 }
@@ -1106,7 +1106,7 @@
                 .line {
                     width: 1px;
                     height: 10px;
-                    background: #747474;
+                    background: #707070;
                     margin: -5px 0px 0px 0px;
                     float: right;
 
@@ -1284,7 +1284,7 @@
                 border-radius: 5px;
                 background: linear-gradient(to bottom,#0f0f0f 21%,#303030 100%);
                 box-shadow: 0px 1px 0px 0px #3c3c3c;
-                color: #fff;
+                color: #ffffff;
             }
             
             span {
@@ -1506,7 +1506,7 @@
     .box {
         width: 100%;
         height: 315px;
-        background: #747474;
+        background: #707070;
         border-radius: 0px 0px 3px 3px;
         padding: 20px 0px;
         border: solid 1px #a2a2a2;
@@ -1560,7 +1560,7 @@
             height: 36px;
             background: linear-gradient(to bottom, #8f9cdc 0%, #3247b8 100%);
             border: 1px solid #4556b1;
-            color: #fff;
+            color: #ffffff;
             border-radius: 5px;
             font-size: 16px;
             font-weight: bold;
